--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
-a, h1, h2, h3, h4, h5, h6, p, span {
-  font-family: Arial, Helvetica, sans-serif;  
+* {
+  font-family: 'Courier New', Courier, monospace;  
 }
 
 a:hover {
@@ -35,11 +35,94 @@ header nav a {
 
 /* ----------- Jumbotron ----------- */
 .jumbotron {
-  height: 670px;
+  height: 700px;
+  padding-top: 200px;
+  margin: 0;
+  background-image: url('../assets/GitHub_back.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-blend-mode: overlay;
 }
 
-.jumbotron .input-form {
-  text-align: center;
+.jumbotron .input-form {  
   width: 100%;
-  height: 400px;
+  min-height: 200px;
+}
+
+.jumbotron .input-form .form-group .form-control {
+  position: relative;
+  height: 40px;
+  border-radius: 0;
+  background: transparent;
+  box-shadow: none;
+  border: none;
+  border-bottom: 1px solid #111;
+  padding: 5px;
+  margin: 0;  
+  z-index: 2;
+  font-size: 16px;
+}
+.jumbotron .input-form .form-group .form-control:focus {
+  border-bottom: 2px solid #111;
+}
+
+
+.jumbotron .input-form .form-group label {
+  position: absolute;
+  top: 0;
+  padding-left: 5px;
+  line-height: 40px;
+  z-index: 1;
+  font-size: 14px;
+  transition: .5s ease;
+  color: #444;
+}
+.jumbotron .input-form .form-group .form-control:focus + label,
+.active-label {
+  margin-top: -20px;  
+  padding-left: 0;
+  color: #666;
+  font-size: 12px;
+}
+.inactive-label {
+  margin-top: 0;  
+  padding-left: 5px;
+  color: #444;
+  font-size: 16px;
+}
+
+.jumbotron .input-form  button {
+  width: 150px;
+  height: 35px;
+  margin-top: 25px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  background-color: #2699FB;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 1000px;
+}
+.jumbotron .input-form button:hover {
+  background-color: #0c66b4;
+}
+
+.inactive-btn {
+  cursor: no-drop;
+}
+
+.active-btn {
+  cursor: pointer;
+}
+
+#userData {
+  display: none;
+}
+
+#userData .user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 2px solid #2699FB;
 }
