Changed height of Repo Detail container.

--- a/css/index.css
+++ b/css/index.css
@@ -194,7 +194,7 @@ header nav a:hover {
 .user-details .repo-list .repo {
   /* border: 1px solid #2699FB;   */
   width: 100%;
-  height: 500px;
+  min-height: 600px;
   padding: 50px;
   margin: 10px 10px 30px;
   background: #FFFFFF;
