--- a/partials/landing.html
+++ b/partials/landing.html
@@ -6,10 +6,8 @@
         <form name="searchUserForm">
           <div class="row">
 
-            <!-- Offsetting input field -->
-            <div class="offset-4"></div>
             <!-- input field -->
-            <div class="col-md-4">
+            <div class="col-md-4 offset-4">
               <div class="form-group">
                 <input type="text" class="form-control" name="userName" ng-model="userName" placeholder="User Name" required autocomplete="off">
                 <!-- <label 
