--- a/partials/repo-details.html
+++ b/partials/repo-details.html
@@ -16,6 +16,9 @@
       <div class="chart" id="weekly-addition-deletion-chart_{{repo.name}}" ng-controller="weeklyAdditionDeletionChartController"></div>
     </div>
     <div class="col-6">
+      <div class="chart" id="weekly-commit-count-chart_{{repo.name}}" ng-controller="weeklyCommitCountChartController"></div>
+    </div>
+    <div class="col-6">
       <div class="chart" id="hourly-commit-chart_{{repo.name}}" ng-controller="hourlyCommitChartController"></div>
     </div>
   </div>
