--- a/css/index.css
+++ b/css/index.css
@@ -54,8 +54,7 @@ header nav a:hover {
 /* Input Search Form Container */
 .jumbotron .input-form {  
   width: 100%;
-  min-height: 600px;
-  height: 600px;
+  min-height: 700px;
   margin: 0;
   padding: 0;  
   padding-top: 270px;
@@ -188,34 +187,91 @@ header nav a:hover {
   color: #2699FB;
 }
 .user-details .repo-list {
-  margin: 80px 10px;
+  margin: 80px 3px;
   width: 100%;
 }
 .user-details .repo-list .repo-item {
   /* border: 1px solid #2699FB;   */
   width: 100%;
   min-height: 600px;
-  padding: 50px 30px;
-  margin: 10px 4px 30px;
-  background: #FDFDFF;
+  padding: 30px 30px;
+  margin: 10px 0px 30px;
+  background: #FFFFFF;
   box-shadow: 0 0 10px #aaa;
   border-radius: 6px;
 }
 
 
 /* Chart */
+.repo-heading {
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color:  #2699FB; 
+  margin: 0;
+  padding: 0;
+}
+.repo-heading .repo-name {  
+  padding: 4px 10px 0;
+  font-size: 50px;
+  color: #2699FB; 
+}
+.repo-name i {
+  font-size: 35px;
+  opacity: 0.9;
+  margin-right: 10px;
+}
+.repo-desc {  
+  padding: 0 10px;
+  margin-top: -5px;
+  margin-left: 35px;
+  font-size: 13px;
+  color: #888;
+}
 .chart-container {
   width: 100%;
-  height: auto;
+  min-height: 500px;
   padding: 30px;
   position: relative;
+  border-top: 1px solid #ddd;
+  text-align: center;
 }
-.chart-container .chart {
+.chart-container .api-list {
+  list-style: none;
+  text-align: center;  
+  height: 300px;  
+  padding: 0;
+  margin-top: 5px;
+}
+.chart-container .api-list .api-item { 
+  padding: 0;
+  margin: 0;
+}
+.chart-container .api-list .api-item a {
   width: 100%;
-  height: auto;
-  /* position: absolute;
-  top: 0;
-  left: 0; */
+  height: 60px;
+  line-height: 60px;
+  margin: 0;
+  background: rgba(38, 153, 251, 0.7);
+  color: #FFFFFF;  
+  padding: 22px 30px;
+  box-shadow: 0 3px 10px #aaa;
+  cursor: pointer;
+}
+.chart-container .chart-info {
+  text-align: left;
+}
+.chart-container .chart-info h5 {
+  font-size: 20px;
+  color: #333;
+}
+.chart-container .chart-info p {
+  font-size: 14px;
+  color: #555;
+}
+.chart-container .chart {  
+  min-width: 800px;
+  min-height: 500px;     
 }
 
 /* -------------------------------- */
