--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,8 @@ header nav {
 }
 header nav a:first-child {
   float: left;
-  padding: 0 30px;
+  padding: 0;
+  padding-left:  30px;
 }
 header nav a {
   margin: 0;
@@ -130,22 +131,70 @@ header nav a:hover {
 
 /* Search Result Container */
 .jumbotron .search-result {
-  background: linear-gradient(#ffffff, rgba(38, 153, 251, 0.1));
+  background: #FFFFFF;
   width: 100%;
-  min-height: 300px;
-  padding: 50px ;
+  min-height: 100px;
+  padding: 50px 0;
+  display: none;
 }
 .jumbotron .search-result h3 {
   font-size: 23px;
   color: #888;
   text-align: left;
 }
+.jumbotron .search-result h3 .info {
+  font-size: 13px;
+  color: #aaa;
+}
+.jumbotron .search-result .user {
+  /* width: 320px; */
+  height: 300px;
+  padding: 0;
+  background: rgba(188, 224, 253, 0.7);
+  margin: 20px;
+  border-radius: 5px;
+}
+.jumbotron .search-result .user img {
+  width: 150px;
+  height: 150px;  
+  border-radius: 1000px;
+  margin: 30px 60px 10px;
+  border: 3px solid #2699FB;
+}
+.jumbotron .search-result .user h4 {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  color: #2699FB;
+  margin-top: 10px; 
+  margin-bottom: 10px;   
+}
+.jumbotron .search-result .user a {
+  width: 100%;
+  text-align: center;
+  font-size: 13px;
+  color: #2699FB;
+  border: 1px solid #2699FB;
+  border-radius: 5px;
+  padding: 8px 20px;
+  margin: 70px;
+  cursor: pointer;
+  background: #FFFFFF;  
+}
+
 
 .jumbotron .search-result .user-avatar {
   width: 100px;
   height: 100px;
   border-radius: 1000px;
   border: 3px solid #2699FB;
+}
+.jumbotron .search-result table td {
+  line-height: 100px;
+}
+.jumbotron .search-result table td a {
+  cursor: pointer;
+  color: #2699FB;
 }
 
 
@@ -268,10 +317,6 @@ header nav a:hover {
 .chart-container .chart-info p {
   font-size: 14px;
   color: #555;
-}
-.chart-container .chart {  
-  min-width: 800px;
-  min-height: 500px;     
 }
 
 /* -------------------------------- */
