--- a/partials/landing.html
+++ b/partials/landing.html
@@ -40,10 +40,20 @@
           </div>
           <div ng-if="!showNotFoundMessage">
             <h3>Search Result -
-              <span ng-bind="total_count"></span> users found</h3>
+              <span ng-bind="total_count"></span> user found <span ng-if="showExtraInfo" class="info">(Showing only 50 results)</span></h3>
           </div>
         </div>
-        <div class="table-responsive">
+        <hr>
+        <div class="row">
+
+          <div class="col-md-3 user" ng-repeat="user in users">            
+            <img class="img-thumbnail img-fluid" ng-src="{{user.avatar_url}}" alt="{{user.login}}">
+            <h4 ng-bind="user.login"></h4>
+            <a ng-click="onViewDetails(user.login)">View Profile</a>            
+          </div>
+
+        </div>
+        <!-- <div class="table-responsive">
 
           <table class="table" id="userData">
             <tbody>
@@ -60,7 +70,7 @@
               </tr>
             </tbody>
           </table>
-        </div>
+        </div> -->
       </div>
     </div>
 
