Moved all files to public/. Added firebase tools.

--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -35,7 +35,7 @@
 
           <!-- when no user found -->
           <div ng-if="showNotFoundMessage">
-            <h3>Hmmmm !!! That's Bad !</h3>
+            <h3>Hmmmm!!! No user found.</h3>
             <p>Please try again with another name.</p>
           </div>
           <div ng-if="!showNotFoundMessage">
